Add mocked yeelight tests
